--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "cv",
   "description": "My portfolio",
-  "homepage": "https://andrey5608.github.io/cv",
+  "homepage": "https://andrey5608.github.io",
   "version": "0.0.1",
   "author": "Andrey Petrov",
   "license": "MIT",
